Adicionando informações do rodapé no HTML

--- a/index.html
+++ b/index.html
@@ -89,6 +89,11 @@
       </section>
     </aside>
   </div>
+  <footer id="footer">
+    <h2>Blog</h2>
+    <p>Os melhores registros de aventuras</p>
+    <p>2022 © Hora de Codar</p>
+  </footer>
 </body>
 
 </html>
