--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-    <nav #navbar>
+    <nav id="navbar">
       <div id="navbar-inner">
         <h2>Blog</h2>
         <ul id="nav-links">
